# landing-page

./: .env.example  .gitignore  AGENTS.md  README.md  biome.json  components.json  lingui.config.ts  next.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.changelog/: README.md
.changelog/20250302/: index.md
.changelog/20250318/: index.md
.changelog/20260225/: index.md  优化-rxjs-流式对话页-ui.md  重命名-history-为-changelog.md
.changelog/20260226/: index.md
.changelog/20260227/: index.md
.changelog/20260228/: index.md
.changelog/20260305/: index.md
.changelog/20260325/: index.md
.changelog/20260331/: index.md
.changelog/20260401/: index.md
.changelog/20260407/: index.md
.cursor/: README.md  mcp.json
.cursor/rules/: code-change-history.mdc  fullstack.mdc  rule-authoring.mdc
.history/: README.md
.history/20260225/: streamingText-空不展示且固定底部.md  优化-code-change-history-规则-按会话单文件.md
agent-server/: README.md  agui_server.py  main.py  pyproject.toml  test.py
agent-server/docs/: agui_agno.md  agui_copilot.md  agui_endpoints.md
agent-server/examples/: hitl_confirmation.py
agent-server/pm/: main.py  prompt.py  scheam.py
agent-server/src/: agent.py
agent-server/src/tools/: backend.py  frontend.py
docs/: README.md  architecture.md  i18n.md  tech-stack.md
mastra/: index.ts
mastra-server/: README.md  constant.ts  index.ts
mastra-server/agents/: general-agent.ts  ppt-agent.ts
prisma/: schema.prisma
scripts/: run-agent.sh
server/: index.ts  trpc.ts
src/: auth.ts  proxy.ts
translations/: test.csv
(+491 files in other folders)
