[project]
name = "agent-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.4.1",
    "fastapi[standard]>=0.128.0",
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
    "yfinance>=1.0",
]
