[project]
name = "agent-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.4.5",
    "ag-ui-protocol>=0.1.0",
    "fastapi[standard]>=0.128.0",
     "openai>=2.15.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "pyjwt>=2.8.0",
    "yfinance>=1.0",
]
